# trx-app

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
example/: app.json  user.json
include/trx/: Application.hpp  Core.hpp
include/trx/app/event/: FrameworkEvent.hpp  FrameworkEventData.hpp  LayerEvent.hpp  LayerEventData.hpp  PushLayerEvent.hpp  WindowResizeEvent.hpp  WindowResizeEventData.hpp
include/trx/app/framework/: LocalSessionFw.hpp  RemoteSessionFw.hpp
include/trx/app/runtime/: RTAppConfig.hpp
include/trx/app/ui/: AboutLayer.hpp  AppSettingsLayer.hpp  MenuOverlay.hpp  SessionSelectorLayer.hpp
include/trx/core/: Application.hpp  Core.hpp  Middleware.hpp
include/trx/core/event/: Event.hpp  EventData.hpp  EventKey.hpp
include/trx/core/framework/: Framework.hpp  FrontendFw.hpp
include/trx/core/runtime/: RTResource.hpp  RTResourceManager.hpp
include/trx/core/thread/: ThreadPool.hpp
include/trx/core/ui/: Layer.hpp  LayerStack.hpp
include/trx/core/window/: Window.hpp  WindowContextSettings.hpp
include/trx/dbo/: AbstractTable.hpp  DboSessionRequest.hpp  DboSessionResource.hpp  T_User.hpp
include/trx/ev/: Event.hpp  EventData.hpp  EventKey.hpp  FrameworkEvent.hpp  FrameworkEventData.hpp  LayerEvent.hpp  LayerEventData.hpp  MiddlewareFw.hpp  WindowResizeEvent.hpp  WindowResizeEventData.hpp
include/trx/http/: SSLCertificate.hpp
include/trx/intf/: BackendSessionWrapper.hpp  Framework.hpp  SessionRequest.hpp  SessionResource.hpp
include/trx/net/: LocalSessionFw.hpp  LocalSessionWrapper.hpp  RESTServerFw.hpp  RemoteSessionFw.hpp  RemoteSessionWrapper.hpp  SessionFw.hpp
include/trx/rsrc/: RTAppConfig.hpp  RTResource.hpp  RTResourceManagerFw.hpp
include/trx/ui/: AboutLayer.hpp  AppSettingsLayer.hpp  FrontendFw.hpp  Layer.hpp  LayerStack.hpp  MenuOverlay.hpp  SessionSelectorLayer.hpp
include/trx/util/config/: Config.hpp  ConfigEntry.hpp  ConfigIO.hpp  ConfigSection.hpp
include/trx/util/logging/: LogManager.hpp  LogSettings.hpp  Utility.hpp
include/trx/util/tools/: Timer.hpp
include/trx/util/types/: Vector2.hpp
include/trx/utils/config/: Config.hpp  ConfigEntry.hpp  ConfigIO.hpp  ConfigParser.hpp  ConfigReader.hpp  ConfigSection.hpp  (+1 more)
src/: Application.cpp  CMakeLists.txt  Core.cpp  EntryPoint.cpp
src/app/event/: WindowResizeEvent.cpp  WindowResizeEventData.cpp
src/app/framework/: LocalSessionFw.cpp  RemoteSessionFw.cpp
src/app/runtime/: RTAppConfig.cpp
src/app/ui/: AboutLayer.cpp  AppSettingsLayer.cpp  MenuOverlay.cpp  SessionSelectorLayer.cpp
src/core/: Application.cpp  Core.cpp  Middleware.cpp
src/core/event/: Event.cpp
src/core/framework/: Framework.cpp  FrontendFw.cpp
src/core/runtime/: RTResourceManager.cpp
src/core/ui/: Layer.cpp  LayerStack.cpp
src/core/ui/window/: Window.cpp
src/core/window/: Window.cpp
src/ev/: MiddlewareFw.cpp
src/http/: SSLCertificate.cpp
src/net/: LocalSessionFw.cpp  LocalSessionWrapper.cpp  RESTServerFw.cpp  RemoteSessionFw.cpp  RemoteSessionWrapper.cpp  SessionFw.cpp
src/rsrc/: RTAppConfig.cpp  RTResourceManagerFw.cpp
src/ui/: AboutLayer.cpp  AppSettingsLayer.cpp  FrontendFw.cpp  LayerStack.cpp  MenuOverlay.cpp  SessionSelectorLayer.cpp
src/util/config/: Config.cpp  ConfigEntry.cpp  ConfigIO.cpp  ConfigSection.cpp
src/util/logging/: LogManager.cpp
src/utils/config/: Config.cpp  ConfigEntry.cpp  ConfigIO.cpp  ConfigReader.cpp  ConfigSection.cpp
src/utils/logging/: LogManager.cpp
(+5 files in other folders)
